updated the sdk according to the last specs
